Edited Homework 2 notebook slightly

--- a/ST5227 Applied Data Mining/Homework 2/ST5227 Homework 2.ipynb
+++ b/ST5227 Applied Data Mining/Homework 2/ST5227 Homework 2.ipynb
@@ -1,8 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ST5227 Homework 2\n",
+    "\n",
+    "Refer to `tutorialsp02.pdf`\n",
+    "\n",
+    "Q5. For Data A: `mydataT02a.csv`, the first 50 columns are the predictors and the last the response.\\\n",
+    "Please fit a linear regression model to the data and use the ridge regression\n",
+    "method to estimate the model.\n",
+    "\n",
+    "- (a) Please calculate the estimators of the coefficients with $\\lambda = 0.1, 1, 10, 100$,\n",
+    "1000 respectively, and plot how the estimators change with $\\lambda$.\n",
+    "- (b) Use leave-one-out CV to choose the tuning parameter $\\lambda$.\n",
+    "- (c) Use the $\\lambda$ selected based on the above CV to estimate the model, predict\n",
+    "the response in Data B: `mydataT02b.csv`, and calculate the mean prediction error square.\n",
+    "- (d) Select $\\lambda$ by AIC and BIC, and 5-fold CV respectively,\\\n",
+    "[Hint: when AIC and BIC are used, please replace $p$ in the penalties by $\\operatorname{trace}\\{X(X^\\top X + \\lambda I)^{−1}X>\\}$]\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,6 +236,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the first 50 columns as predictors"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -418,6 +446,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the last column as the response variable"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -445,17 +480,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Ridge(alpha=0.1, copy_X=True, fit_intercept=False, max_iter=None,\n",
-       "      normalize=False, random_state=None, solver='auto', tol=0.001)"
+       "Ridge(alpha=0.1)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +501,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.79657772,  0.01040525,  0.14030517,  0.02200842,  0.96031332,\n",
+       "        0.10677898, -0.11812322, -0.02750492,  0.04656705, -0.05035902,\n",
+       "       -0.03538608, -0.01925318, -0.04789771, -0.1259586 , -0.00716482,\n",
+       "        0.0646022 ,  0.02793099, -0.17444455, -0.0164374 ,  0.98197594,\n",
+       "        0.06725891, -0.0468257 ,  0.0412042 , -0.0133665 , -0.00499148,\n",
+       "       -0.1449175 ,  0.07150799,  0.06248162, -0.09390103, -0.06865386,\n",
+       "        0.08108347,  0.05211863,  0.08283534,  0.17222887, -0.05616326,\n",
+       "       -0.10451902,  0.23540306, -0.0181539 , -0.01848034,  0.08233538,\n",
+       "       -0.07159551,  0.09060741,  0.09800907, -0.09378668,  0.03257819,\n",
+       "        0.1268953 ,  0.07362184, -0.10988863,  0.0677957 ,  0.21269452])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -476,14 +539,35 @@
        "50"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clf.coef_"
+    "len(clf.coef_)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -502,7 +586,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
